emdb service, venue management service and schedule service